package.json edit

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "asiatique-travel",
   "version": "0.1.0",
-  "homepage": "https://gitname.github.io/react-gh-pages",
+  "homepage": "https://lolmatina.github.io/asiatique-travel",
   "private": true,
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
